<resources>
    <string name="app_name">TV Launcher</string>
    <string name="select_apps">Select Apps</string>
    <string name="select_apps_max">Select apps (max %1$d)</string>
    <string name="selected_badge">%1$d / %2$d</string>
    <string name="filter_all">All</string>
    <string name="filter_selected">Selected</string>
    <string name="filter_shortcuts">Shortcuts</string>
    <string name="search_hint">Search apps…</string>
    <string name="done">Done</string>
    <string name="settings">Settings</string>
    <string name="shortcuts">Shortcuts</string>
    <string name="about">About &amp; Settings</string>
    <string name="about_title">Settings &amp; About</string>
    <string name="about_open_github">Open GitHub</string>
    <string name="about_close">Close</string>
    <string name="about_message">TV Launcher\nVersion %1$s\n\nFree and open source.\nLicense: CC BY-NC 4.0 (no selling).\n\n%2$s</string>
    <string name="github_repo_url">https://github.com/wiiguy/lightweight_androidtv_launcher</string>
    <string name="add_app">Add App</string>
    <string name="slot_limit_reached">Home screen is full (max %1$d apps).</string>
    <string name="remove_app_title">Remove app?</string>
    <string name="remove_app_message">Remove %1$s from the home screen?</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="app_menu_title">App Options</string>
    <string name="app_menu_open">Open</string>
    <string name="app_menu_move_left">Move Left</string>
    <string name="app_menu_move_right">Move Right</string>
    <string name="app_menu_info">App Info</string>
    <string name="loading_apps">Loading apps…</string>
    <string name="update_check_now">Check for updates</string>
    <string name="update_checking">Checking for updates…</string>
    <string name="update_none">You\'re on the latest version.</string>
    <string name="update_ready">Update downloaded. Confirm install.</string>
    <string name="update_failed">Update check or download failed.</string>
    <string name="update_invalid_release">Update file on GitHub does not match the release version. Try again after a new release is published.</string>
    <string name="update_disabled">Automatic updates are off.</string>
    <string name="update_permission_needed">Allow installs from this app in Settings.</string>
    <string name="update_available_title">Update available</string>
    <string name="update_available_message">Version %1$s is ready to install.</string>
    <string name="update_install">Install</string>
    <string name="update_auto_toggle">Automatic weekly updates</string>
    <string name="update_auto_off">Weekly updates disabled.</string>
    <string name="update_auto_on">Weekly updates enabled.</string>

    <!-- TV Launcher Override & RAM optimization settings -->
    <string name="override_default_launcher">Override TV Default Launcher</string>
    <string name="override_default_launcher_desc">Intercepts TV Home key on devices that lock the default launcher</string>
    <string name="enable_accessibility_prompt">Please enable "TV Launcher" under Accessibility Services to intercept the Home key.</string>
    <string name="suppress_stock_ram">Kill Stock Launcher Background RAM</string>
    <string name="suppress_stock_ram_desc">Frees 100MB+ RAM by stopping heavy OEM TV home screens</string>
    <string name="suppress_stock_ram_confirm">This stops background processes of pre-installed TV launchers to free RAM. Launchers you installed yourself are never touched. You can turn it off anytime in About.</string>
    <string name="enable">Enable</string>
    <string name="accessibility_service_description">Allows TV Launcher to detect the Home button on TV remotes and return to this launcher.</string>

    <!-- Wallpaper Strings -->
    <string name="wallpaper_settings">Wallpaper Settings</string>
    <string name="wallpaper_mode">Wallpaper Source</string>
    <string name="wallpaper_mode_solid">Dark Minimal (No Wallpaper)</string>
    <string name="wallpaper_mode_reddit">Cycling Online Wallpaper</string>
    <string name="wallpaper_mode_custom">Custom URL Image</string>
    <string name="wallpaper_category">Category</string>
    <string name="wallpaper_category_general">General HD Wallpapers</string>
    <string name="wallpaper_category_nature">Nature &amp; Landscapes</string>
    <string name="wallpaper_category_cars">Cars &amp; Automotive</string>
    <string name="wallpaper_category_anime">Anime &amp; Artwork</string>
    <string name="wallpaper_category_space">Space &amp; Astronomy</string>
    <string name="wallpaper_category_architecture">City &amp; Architecture</string>
    <string name="wallpaper_interval">Cycle Interval</string>
    <string name="wallpaper_interval_15m">Every 15 minutes</string>
    <string name="wallpaper_interval_1h">Every 1 hour</string>
    <string name="wallpaper_interval_6h">Every 6 hours</string>
    <string name="wallpaper_interval_24h">Daily (24 hours)</string>
    <string name="wallpaper_custom_url_hint">Enter direct image URL (https://…)</string>
    <string name="wallpaper_dim_overlay">Dim Background for Readability</string>
    <string name="wallpaper_refresh_now">Refresh Wallpaper Now</string>
    <string name="wallpaper_updating">Fetching new wallpaper…</string>
    <string name="wallpaper_updated">Wallpaper updated.</string>
    <string name="wallpaper_failed">Could not load wallpaper image.</string>
</resources>
